--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -205,6 +205,12 @@
  mod_pc_pd_ironsand_habitability: "Desert Habitability"
  trait_pc_pd_ironsand_preference: "Desert Preference"
  trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cactus: "Cactus World"
+ pc_pd_cactus_desc: "This desert planet is dominated by towering cacti, storing vast water reserves within their thick, spiny trunks."
+ pc_pd_cactus_adj: "spikey"
+ mod_pc_pd_cactus_habitability: "Desert Habitability"
+ trait_pc_pd_cactus_preference: "Desert Preference"
+ trait_pc_pd_cactus_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "Mundo Salar"
  pc_pd_salt_desc: "Mundo rochoso com atmosfera de nitrogênio-oxigênio. O terreno coberto de minerais consiste em grande parte de salinas e cadeias de montanhas e grandes formações cristalinas. Grande parte da superfície é inóspita para a maioria das formas de vida vegetal e animal."
  pc_pd_salt_adj: "salgado"
