--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -82,6 +82,8 @@
  pd_fungi_desc: "Seco e coberto de cinzas vulcânicas, este mundo abriga fungos do deserto que resistem a altas temperaturas, à secura e à baixa nutrição."
  pd_ironsand: "$pc_pd_ironsand$"
  pd_ironsand_desc: "$pc_pd_ironsand_desc$"
+ pd_cactus: "$pc_pd_cactus$"
+ pd_cactus_desc: "$pc_pd_cactus_desc$"
  pd_salt: "Mundo Salar"
  pd_salt_desc: "Ricos depósitos minerais abrangem este planeta, mas o elevado teor de sal na maior parte da superfície revela-se inóspito para muitas formas de vida vegetal e animal."
  pd_aquifer: "Mundo Aquífero"
