--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -206,6 +206,12 @@ trait_pc_pd_fungi_preference_desc: "$trait_pc_arctic_preference_desc$"
  mod_pc_pd_ironsand_habitability: "Desert Habitability"
  trait_pc_pd_ironsand_preference: "Desert Preference"
  trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cactus: "Cactus World"
+ pc_pd_cactus_desc: "This desert planet is dominated by towering cacti, storing vast water reserves within their thick, spiny trunks."
+ pc_pd_cactus_adj: "spikey"
+ mod_pc_pd_cactus_habitability: "Desert Habitability"
+ trait_pc_pd_cactus_preference: "Desert Preference"
+ trait_pc_pd_cactus_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_salt: "Monde de Sel"
 pc_pd_salt_desc: "Monde rocheux avec une atmosphère à base d'azote et d'oxygène. Le terrain couvert de minéraux se compose principalement de plaines de sel et de chaînes de montagnes et de grandes formations cristallines. Une grande partie de la surface est inhospitalière pour la plupart des formes de vie végétale et animale."
 pc_pd_salt_adj: "salé"
