--- a/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
@@ -83,6 +83,8 @@ pd_fungi: "Monde Fongique"
 pd_fungi_desc: "Sec et couvert de cendres volcaniques, ce monde est envahi par des champignons du désert qui résistent aux températures élevées, à la sécheresse et à la faible nutrition."
  pd_ironsand: "$pc_pd_ironsand$"
  pd_ironsand_desc: "$pc_pd_ironsand_desc$"
+ pd_cactus: "$pc_pd_cactus$"
+ pd_cactus_desc: "$pc_pd_cactus_desc$"
 pd_salt: "Monde de Sel"
 pd_salt_desc: "Bien que des dépôts minéraux riches puissent être trouvés partout sur cette planète, une grande partie de la surface est inhospitalière pour la plupart des formes de vie végétale et animale."
 pd_aquifer: "Monde Aquifères"
