--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -149,6 +149,12 @@
  mod_pc_pd_ironsand_habitability: "Desert Habitability"
  trait_pc_pd_ironsand_preference: "Desert Preference"
  trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cactus: "Cactus World"
+ pc_pd_cactus_desc: "This desert planet is dominated by towering cacti, storing vast water reserves within their thick, spiny trunks."
+ pc_pd_cactus_adj: "spikey"
+ mod_pc_pd_cactus_habitability: "Desert Habitability"
+ trait_pc_pd_cactus_preference: "Desert Preference"
+ trait_pc_pd_cactus_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_aerial: "Schwebende Welt"
  pc_pd_aerial_desc: "Dieser Planet ist eine feuchte, felsige Welt mit einer dichten Stickstoff-Sauerstoff-Atmosphäre und weist erhebliche Niederschläge auf. Hoch über den von dichter Vegetation umhüllten Landmassen gleiten riesige Samenkapseln, die von der einzigartigen Flora des Planeten getragen werden, wie Wolken durch den Himmel."
  pc_pd_aerial_adj: "schwebend"
