--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -82,6 +82,8 @@
  pd_fungi_desc: "Diese trockene und mit Vulkanasche bedeckte Welt beherbergt Wüstenpilze, die hohen Temperaturen, Trockenheit und Nährstoffmangel standhalten."
  pd_ironsand: "$pc_pd_ironsand$"
  pd_ironsand_desc: "$pc_pd_ironsand_desc$"
+ pd_cactus: "$pc_pd_cactus$"
+ pd_cactus_desc: "$pc_pd_cactus_desc$"
  pd_salt: "Salzwelt"
  pd_salt_desc: "Der Planet ist über und über mit reichen Mineralvorkommen bedeckt, doch der hohe Salzgehalt der Oberfläche ist für viele Pflanzen- und Tierarten unwirtlich."
  pd_aquifer: "Aquifer Welt"
