--- a/planetary_diversity/localisation/japanese/planetarydiversity_planet_classes_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_planet_classes_l_japanese.yml
@@ -205,12 +205,12 @@
  mod_pc_pd_ironsand_habitability: "Desert Habitability"
  trait_pc_pd_ironsand_preference: "Desert Preference"
  trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_ironsand: "Ironsand World"
- pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
- pc_pd_ironsand_adj: "sandy"
- mod_pc_pd_ironsand_habitability: "Desert Habitability"
- trait_pc_pd_ironsand_preference: "Desert Preference"
- trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cactus: "Cactus World"
+ pc_pd_cactus_desc: "This desert planet is dominated by towering cacti, storing vast water reserves within their thick, spiny trunks."
+ pc_pd_cactus_adj: "spikey"
+ mod_pc_pd_cactus_habitability: "Desert Habitability"
+ trait_pc_pd_cactus_preference: "Desert Preference"
+ trait_pc_pd_cactus_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "Salt World"
  pc_pd_salt_desc: "Rocky world with a nitrogen-oxygen atmosphere. The mineral-covered terrain consists largely of salt flats and mountain ranges and large crystal formations. Much of the surface is inhospitable to most forms of plant and animal life."
  pc_pd_salt_adj: "salty"
