--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -82,6 +82,8 @@
  pd_fungi_desc: "건조하고 화산재로 뒤덮인 이 행성에는 고온, 건조, 영양 부족을 견디는 사막 곰팡이가 서식하고 있습니다."
  pd_ironsand: "$pc_pd_ironsand$"
  pd_ironsand_desc: "$pc_pd_ironsand_desc$"
+ pd_cactus: "$pc_pd_cactus$"
+ pd_cactus_desc: "$pc_pd_cactus_desc$"
  pd_salt: "소금 행성"
  pd_salt_desc: "풍부한 광물 퇴적물이 행성에 걸쳐 있지만, 대부분의 표면의 높은 염분 함량으로 인해 다양한 형태의 동식물이 살기에는 열악한 환경입니다."
  pd_aquifer: "대수층 행성"
