--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -205,6 +205,12 @@
  mod_pc_pd_ironsand_habitability: "Desert Habitability"
  trait_pc_pd_ironsand_preference: "Desert Preference"
  trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cactus: "Cactus World"
+ pc_pd_cactus_desc: "This desert planet is dominated by towering cacti, storing vast water reserves within their thick, spiny trunks."
+ pc_pd_cactus_adj: "spikey"
+ mod_pc_pd_cactus_habitability: "Desert Habitability"
+ trait_pc_pd_cactus_preference: "Desert Preference"
+ trait_pc_pd_cactus_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "Świat solny"
  pc_pd_salt_desc: "Skalisty świat z atmosferą azotowo-tlenową. Teren pokryty minerałami składa się głównie z równin solnych i pasm górskich oraz dużych formacji kryształowych. Duża część powierzchni jest niegościnna dla większości form życia roślinnego i zwierzęcego."
  pc_pd_salt_adj: "solny"
