--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -205,6 +205,12 @@
  mod_pc_pd_ironsand_habitability: "Desert Habitability"
  trait_pc_pd_ironsand_preference: "Desert Preference"
  trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_cactus: "Cactus World"
+ pc_pd_cactus_desc: "This desert planet is dominated by towering cacti, storing vast water reserves within their thick, spiny trunks."
+ pc_pd_cactus_adj: "spikey"
+ mod_pc_pd_cactus_habitability: "Desert Habitability"
+ trait_pc_pd_cactus_preference: "Desert Preference"
+ trait_pc_pd_cactus_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "Соляной мир"
  pc_pd_salt_desc: "Каменистый мир с азотно-кислородной атмосферой. Покрытая минералами местность состоит в основном из соляных равнин, горных хребтов и крупных кристаллических образований. Большая часть поверхности негостеприимна для большинства форм растительной и животной жизни."
  pc_pd_salt_adj: "соляная"
