--- a/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
@@ -40,6 +40,7 @@
  pdengine.21.coastal: "$pc_pd_coastal$"
  pdengine.21.fungi: "$pc_pd_fungi$"
  pdengine.21.ironsand: "$pc_pd_ironsand$"
+ pdengine.21.cactus: "$pc_pd_cactus$"
  pdengine.21.salt: "$pc_pd_salt$"
  pdengine.21.aquifer: "$pc_pd_aquifer$"
  pdengine.21.arid: "$pc_arid$"
