--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -82,6 +82,8 @@
  pd_fungi_desc: "Na tym suchym i pokrytym popiołem wulkanicznym świecie występują grzyby pustynne, które są odporne na wysokie temperatury, suchość i niskie wartości odżywcze."
  pd_ironsand: "$pc_pd_ironsand$"
  pd_ironsand_desc: "$pc_pd_ironsand_desc$"
+ pd_cactus: "$pc_pd_cactus$"
+ pd_cactus_desc: "$pc_pd_cactus_desc$"
  pd_salt: "Świat solny"
  pd_salt_desc: "Bogate złoża minerałów pokrywają tę planetę, jednak wysoka zawartość soli na większości powierzchni okazuje się niegościnna dla wielu form życia roślinnego i zwierzęcego."
  pd_aquifer: "Świat wodonośny"
