--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
@@ -82,6 +82,8 @@
  pd_fungi_desc: "Сухой и покрытый вулканическим пеплом, этот мир является местом обитания пустынных грибов, которые приспособились к высоким температурам, сухости и недостатку питательных веществ."
  pd_ironsand: "$pc_pd_ironsand$"
  pd_ironsand_desc: "$pc_pd_ironsand_desc$"
+ pd_cactus: "$pc_pd_cactus$"
+ pd_cactus_desc: "$pc_pd_cactus_desc$"
  pd_salt: "Соляной мир"
  pd_salt_desc: "Покрытая минералами поверхность планеты состоит в основном из соляных равнин, горных хребтов и крупных кристаллических образований. Большая часть суши негостеприимна для большинства форм растительной и животной жизни."
  pd_aquifer: "Водоносный мир"
