--- a/planetary_diversity/localisation/spanish/planetarydiversity_planet_modifiers_l_spanish.yml
+++ b/planetary_diversity/localisation/spanish/planetarydiversity_planet_modifiers_l_spanish.yml
@@ -82,6 +82,8 @@
  pd_fungi_desc: "Dry and covered in volcanic ash, this world hosts desert fungi that resist high temperatures, dryness, and low nutrition."
  pd_ironsand: "$pc_pd_ironsand$"
  pd_ironsand_desc: "$pc_pd_ironsand_desc$"
+ pd_cactus: "$pc_pd_cactus$"
+ pd_cactus_desc: "$pc_pd_cactus_desc$"
  pd_salt: "Salt World"
  pd_salt_desc: "Rich mineral deposits span this planet, yet the high salt content on most of the surface proves inhospitable to many forms of plant and animal life."
  pd_aquifer: "Aquifer World"
