--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -99,6 +99,12 @@
  mod_pc_pd_algae_habitability: "Habitabilidade Oceânica"
  trait_pc_pd_algae_preference: "Preferência Oceânica"
  trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_columnar: "Columnar World"
+ pc_pd_columnar_desc: "A rocky world with a nitrogen-oxygen atmosphere and extensive hydrosphere. The surface is covered in oceans and interspersed with landmasses formed by columnar basalt structures resulting from eons of significant volcanic activity."
+ pc_pd_columnar_adj: "columned"
+ mod_pc_pd_columnar_habitability: "Ocean Habitability"
+ trait_pc_pd_columnar_preference: "Ocean Preference"
+ trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Mundo Recifes"
  pc_pd_reef_desc: "Mundo temperado rochoso com atmosfera de nitrogênio-oxigênio e uma hidrosfera significativa. Os oceanos rasos cobrem mais de 99% da superfície e os sistemas de recifes significativos abaixo da superfície podem ser vistos em órbita. As únicas áreas acima da água são onde o sistema de recifes cresceu o suficiente para criar cadeias de ilhas de coral dispersas."
  pc_pd_reef_adj: "arrecife"
