--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -40,6 +40,8 @@
  pd_kelp_desc: "A superfície do planeta é principalmente oceânica, com águas rasas ricas em nutrientes que promovem extensas florestas de algas. Este próspero ecossistema subaquático suporta uma biodiversidade notável em todo o planeta."
  pd_algae: "Mundo de Algas Rosa"
  pd_algae_desc: "Os ricos mares e lagos rasos deste planeta sustentam a proliferação de algas cor-de-rosa brilhantes, criando um espetáculo visual impressionante que pode ser visto do espaço."
+ pd_columnar: "$pc_pd_columnar$"
+ pd_columnar_desc: "$pc_pd_columnar_desc$"
  pd_reef: "Mundo Recifes"
  pd_reef_desc: "Extensos oceanos rasos envolvem todo o planeta, expondo sistemas de recifes significativos logo abaixo da superfície quando observados em órbita. Cadeias de ilhas formadas por corais emergem onde os recifes rompem a linha d'água."
  pd_archipelago: "Mundo Arquipélago"
