--- a/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
@@ -40,6 +40,8 @@
  pd_kelp_desc: "The planet's surface is primarily ocean, with nutrient-rich shallow waters fostering expansive kelp forests. This thriving underwater ecosystem supports a remarkable biodiversity across the entire planet."
  pd_algae: "Pink Algae World"
  pd_algae_desc: "This planet's rich shallow seas and lakes support brilliant pink algae blooms, creating a stunning visual spectacle that can be seen from space."
+ pd_columnar: "$pc_pd_columnar$"
+ pd_columnar_desc: "$pc_pd_columnar_desc$"
  pd_reef: "Reef World"
  pd_reef_desc: "Extensive shallow oceans envelop the entire planet, exposing significant reef systems just below the surface when observed from orbit. Coral-made island chains emerge where the reefs breach the waterline."
  pd_archipelago: "Archipelago World"
@@ -145,7 +147,7 @@
  pd_antarctic: "Antarctic World"
  pd_antarctic_desc: "While winds can reach over 25 km per hour in winter, life clings to isolated pockets under sea ice, caves, and protected valleys."
  pd_aeolian: "Aeloian World"
- pd_aeolian_desc: "This planet's winds routinely reach speeds of over 3 km per hour. These winds have created hollowed-out sinkholes, slot canyons, and depressions, which have allowed life to thrive inside, safe from the weather."
+ pd_aeolian_desc: "This planet's winds routinely reach speeds of over 300 km per hour. These winds have created hollowed-out sinkholes, slot canyons, and depressions, which have allowed life to thrive inside, safe from the weather."
  pd_ice_spike: "Ice Spike World"
  pd_ice_spike_desc: "The intense tectonic activity below the surface hits against the deep ice layer, creating the towering ice spikes that dominate the landscape."
  pd_crevasse: "Crevasse World"
