--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -100,6 +100,12 @@ pc_pd_algae_adj: "rosâtre"
 mod_pc_pd_algae_habitability: "Habitabilité Océanique"
 trait_pc_pd_algae_preference: "Préférence Océanique"
 trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_columnar: "Columnar World"
+ pc_pd_columnar_desc: "A rocky world with a nitrogen-oxygen atmosphere and extensive hydrosphere. The surface is covered in oceans and interspersed with landmasses formed by columnar basalt structures resulting from eons of significant volcanic activity."
+ pc_pd_columnar_adj: "columned"
+ mod_pc_pd_columnar_habitability: "Ocean Habitability"
+ trait_pc_pd_columnar_preference: "Ocean Preference"
+ trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_reef: "Monde de Récifs"
 pc_pd_reef_desc: "Monde rocheux tempéré avec une atmosphère à base d'azote et d'oxygène et une hydrosphère significative. Les océans peu profonds recouvrent plus de 99% de la surface et sous la surface, des systèmes de récifs significatifs peuvent être vus depuis l'orbite. Les seules zones émergées sont là où le système de récifs a atteint une hauteur suffisante pour créer des chaînes d'îles coralliennes éparpillées."
 pc_pd_reef_adj: "récifal"
