--- a/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
@@ -41,6 +41,8 @@ pd_kelp: "Monde des Algues Marines"
 pd_kelp_desc: "Les océans recouvrent une grande partie de la surface de cette planète. Les riches eaux peu profondes soutiennent des forêts de varech et une biodiversité à l'échelle planétaire."
 pd_algae: "Monde des Algues Roses"
 pd_algae_desc: "Les riches mers peu profondes et lacs de cette planète soutiennent des floraisons brillantes d'algues roses, créant un spectacle visuel impressionnant visible depuis l'espace."
+ pd_columnar: "$pc_pd_columnar$"
+ pd_columnar_desc: "$pc_pd_columnar_desc$"
 pd_reef: "Monde des Récifs"
 pd_reef_desc: "Des systèmes de récifs étendus visibles depuis l'orbite forment les seuls massifs terrestres de la planète, avec des chaînes d'îles dispersées créées là où le corail a poussé au-dessus du niveau de l'eau."
 pd_archipelago: "Monde Archipélagique"
