--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -99,6 +99,12 @@
  mod_pc_pd_algae_habitability: "Bewohnbarkeit (Ozeanisch)"
  trait_pc_pd_algae_preference: "Anpassung (Ozeanisch)"
  trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_columnar: "Columnar World"
+ pc_pd_columnar_desc: "A rocky world with a nitrogen-oxygen atmosphere and extensive hydrosphere. The surface is covered in oceans and interspersed with landmasses formed by columnar basalt structures resulting from eons of significant volcanic activity."
+ pc_pd_columnar_adj: "columned"
+ mod_pc_pd_columnar_habitability: "Ocean Habitability"
+ trait_pc_pd_columnar_preference: "Ocean Preference"
+ trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Riffwelt"
  pc_pd_reef_desc: "Felsige gemäßigte Welt mit einer Stickstoff-Sauerstoff-Atmosphäre und einer bedeutenden Hydrosphäre. Flache Ozeane bedecken mehr als §Y99%§! der Oberfläche und die unter der Oberfläche liegenden bedeutenden Riffsysteme sind aus der Umlaufbahn sichtbar. Die einzigen Bereiche über Wasser sind dort, wo das Riffsystem hoch genug gewachsen ist, um verstreute Inselketten aus Korallen zu bilden."
  pc_pd_reef_adj: "gerifft"
