--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -40,6 +40,8 @@
  pd_kelp_desc: "Die Oberfläche des Planeten besteht hauptsächlich aus Ozean, dessen nährstoffreiches Flachwasser ausgedehnte Kelpwälder hervorbringt. Dieses blühende Unterwasser-Ökosystem unterstützt eine bemerkenswerte Artenvielfalt auf dem gesamten Planeten."
  pd_algae: "Rosa Algen Welt"
  pd_algae_desc: "Die üppigen flachen Meere und Seen dieses Planeten beherbergen leuchtend rosa Algenblüten und erzeugen ein atemberaubendes visuelles Schauspiel, das vom Weltraum aus sichtbar ist."
+ pd_columnar: "$pc_pd_columnar$"
+ pd_columnar_desc: "$pc_pd_columnar_desc$"
  pd_reef: "Riffwelt"
  pd_reef_desc: "Ausgedehnte flache Ozeane umhüllen den gesamten Planeten und legen bei Beobachtung aus der Umlaufbahn bedeutende Riffsysteme knapp unter der Oberfläche frei. Dort, wo die Riffe die Wasserlinie durchbrechen, entstehen aus Korallen gebildete Inselketten."
  pd_archipelago: "Archipel Welt"
