--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -99,6 +99,12 @@
  mod_pc_pd_algae_habitability: "해양 행성 거주 적합도"
  trait_pc_pd_algae_preference: "해양 행성 선호"
  trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_columnar: "Columnar World"
+ pc_pd_columnar_desc: "A rocky world with a nitrogen-oxygen atmosphere and extensive hydrosphere. The surface is covered in oceans and interspersed with landmasses formed by columnar basalt structures resulting from eons of significant volcanic activity."
+ pc_pd_columnar_adj: "columned"
+ mod_pc_pd_columnar_habitability: "Ocean Habitability"
+ trait_pc_pd_columnar_preference: "Ocean Preference"
+ trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "암초 행성"
  pc_pd_reef_desc: "대기가 질소와 산소로 조성되었으며 상당한 수권이 존재하는 온화한 암석형 행성입니다. 얕은 바다는 표면의 99% 이상을 덮고 있으며, 궤도에서는 수면 아래에서 중요한 산호초 시스템을 볼 수 있습니다. 물 위의 유일한 지역은 산호초가 흩어져 있는 섬 사슬을 만들 정도로 산호초 시스템이 높게 자란 곳입니다."
  pc_pd_reef_adj: "암초 투성이"
