--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -40,6 +40,8 @@
  pd_kelp_desc: "행성의 표면은 주로 바다이며, 영양분이 풍부한 얕은 바닷물은 광활한 해초 숲을 조성하고 있습니다. 이 번성하는 수중 생태계는 행성 전체에 걸쳐 놀라운 생물 다양성을 지원합니다."
  pd_algae: "분홍 조류 행성"
  pd_algae_desc: "이 행성의 풍부한 얕은 바다와 호수는 화사한 분홍빛 조류가 만발하여 우주에서도 볼 수 있는 놀라운 시각적 장관을 연출합니다."
+ pd_columnar: "$pc_pd_columnar$"
+ pd_columnar_desc: "$pc_pd_columnar_desc$"
  pd_reef: "암초 행성"
  pd_reef_desc: "광활한 얕은 바다가 행성 전체를 감싸고 있어 궤도에서 관찰하면 표면 바로 아래에 상당한 산호초 시스템이 드러납니다. 산호초가 수면을 침범하는 곳에는 산호로 이루어진 섬 사슬이 나타납니다."
  pd_archipelago: "열도 행성"
