--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -99,6 +99,12 @@
  mod_pc_pd_algae_habitability: "Możliwość zamieszkania świata oceanicznego"
  trait_pc_pd_algae_preference: "Preferowany teren: ocean"
  trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_columnar: "Columnar World"
+ pc_pd_columnar_desc: "A rocky world with a nitrogen-oxygen atmosphere and extensive hydrosphere. The surface is covered in oceans and interspersed with landmasses formed by columnar basalt structures resulting from eons of significant volcanic activity."
+ pc_pd_columnar_adj: "columned"
+ mod_pc_pd_columnar_habitability: "Ocean Habitability"
+ trait_pc_pd_columnar_preference: "Ocean Preference"
+ trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Świat rafowy"
  pc_pd_reef_desc: "Skalisty świat o klimacie umiarkowanym z atmosferą azotowo-tlenową i znaczną hydrosferą. Płytkie oceany pokrywają ponad 99% powierzchni, a pod powierzchnią można zobaczyć z orbity znaczące systemy raf. Jedyne obszary nad wodą to miejsca, w których system raf urósł na tyle wysoko, że utworzyły rozproszone łańcuchy wysp koralowych."
  pc_pd_reef_adj: "rafowy"
