--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -40,6 +40,8 @@
  pd_kelp_desc: "Powierzchnię planety tworzą głównie oceany, a płytkie wody bogate w składniki odżywcze porastają rozległe lasy wodorostów. Ten kwitnący podwodny ekosystem zapewnia niezwykłą różnorodność biologiczną na całej planecie."
  pd_algae: "Świat różowych alg"
  pd_algae_desc: "W bogatych płytkich morzach i jeziorach tej planety kwitną wspaniałe różowe algi, tworząc oszałamiający spektakl wizualny, który można zobaczyć z kosmosu."
+ pd_columnar: "$pc_pd_columnar$"
+ pd_columnar_desc: "$pc_pd_columnar_desc$"
  pd_reef: "Świat rafowy"
  pd_reef_desc: "Rozległe, płytkie oceany otaczają całą planetę, odsłaniając znaczące systemy raf tuż pod powierzchnią, gdy obserwuje się je z orbity. Łańcuchy wysp zbudowanych z koralowców wyłaniają się tam, gdzie rafy przekraczają linię wodną."
  pd_archipelago: "Świat archipelagowy"
