--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -99,6 +99,12 @@
  mod_pc_pd_algae_habitability: "Приспособленность к океаническим мирам"
  trait_pc_pd_algae_preference: "Предпочтение океанических миров"
  trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_columnar: "Columnar World"
+ pc_pd_columnar_desc: "A rocky world with a nitrogen-oxygen atmosphere and extensive hydrosphere. The surface is covered in oceans and interspersed with landmasses formed by columnar basalt structures resulting from eons of significant volcanic activity."
+ pc_pd_columnar_adj: "columned"
+ mod_pc_pd_columnar_habitability: "Ocean Habitability"
+ trait_pc_pd_columnar_preference: "Ocean Preference"
+ trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Мир рифов"
  pc_pd_reef_desc: "Каменистый мир с азотно-кислородной атмосферой и значительной гидросферой. Мелководные океаны покрывают почти 99% поверхности, а находящиеся под поверхностью значительные рифовые системы видны с орбиты. Единственные участки над водой находятся там, где рифовая система выросла достаточно высоко, чтобы создать разрозненные островные цепи кораллов."
  pc_pd_reef_adj: "рифовая"
