--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
@@ -40,6 +40,8 @@
  pd_kelp_desc: "Почти всю поверхность планеты занимает океан, плотно заполненный лесами питательной ламинарии. Морская экосистема обладает поразительным богатством видов."
  pd_algae: "Мир розовых водорослей"
  pd_algae_desc: "Моря и реки этой планеты заполняют розовые, постоянно цветущие водоросли, и это отлично заметно даже из космоса."
+ pd_columnar: "$pc_pd_columnar$"
+ pd_columnar_desc: "$pc_pd_columnar_desc$"
  pd_reef: "Мир рифов"
  pd_reef_desc: "Мелководные океаны покрывают почти 99% поверхности планеты, а находящиеся под поверхностью значительные рифовые системы видны с орбиты. Единственные участки над водой находятся там, где рифовая система выросла достаточно высоко, чтобы создать разрозненные островные цепи кораллов."
  pd_archipelago: "Мир архипелагов"
