--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -89,6 +89,12 @@
  mod_pc_pd_algae_habitability: "海洋星球宜居性"
  trait_pc_pd_algae_preference: "海洋星球偏好"
  trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_columnar: "Columnar World"
+ pc_pd_columnar_desc: "A rocky world with a nitrogen-oxygen atmosphere and extensive hydrosphere. The surface is covered in oceans and interspersed with landmasses formed by columnar basalt structures resulting from eons of significant volcanic activity."
+ pc_pd_columnar_adj: "columned"
+ mod_pc_pd_columnar_habitability: "Ocean Habitability"
+ trait_pc_pd_columnar_preference: "Ocean Preference"
+ trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "珊瑚礁星球"
  pc_pd_reef_desc: "气候温和的岩石星球，拥有氮氧大气层与巨大的水圈。99%以上地表都是浅海，在行星轨道上可以直接看到隐藏在水面下的规模巨大的礁脉体系。有些地方的礁脉生长到高出水面，形成星罗棋布的礁脉链，成为仅有的露出海面的陆地。"
  pc_pd_reef_adj: "珊瑚礁"
