--- a/planetary_diversity/localisation/english/planetarydiversity_engine_events_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_engine_events_l_english.yml
@@ -21,6 +21,7 @@
  pdengine.21.fog: "$pc_pd_fog$"
  pdengine.21.kelp: "$pc_pd_kelp$"
  pdengine.21.algae: "$pc_pd_algae$"
+ pdengine.21.columnar: "$pc_pd_columnar$"
  pdengine.21.reef: "$pc_pd_reef$"
  pdengine.21.archipelago: "$pc_pd_archipelago$"
  pdengine.21.tropical: "$pc_tropical$"
