--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -33,6 +33,8 @@
  pd_kelp_desc: "海洋覆盖了此星球的大部分地表，富饶的浅海孕育出广袤的巨藻林。这一水下生态系统生机勃勃，支撑着星球表面引人注目的丰富生命形态。"
  pd_algae: "粉藻华星球"
  pd_algae_desc: "该星球上众多浅海和湖泊供养着绚丽的粉色藻华，这番壮丽之景在太空中也能看得一清二楚。"
+ pd_columnar: "$pc_pd_columnar$"
+ pd_columnar_desc: "$pc_pd_columnar_desc$"
  pd_reef: "珊瑚礁星球"
  pd_reef_desc: "星球表面都是浅海，从轨道上可以看到水面下的巨大礁脉体系。礁脉高出水面形成了珊瑚岛链。"
  pd_archipelago: "火山列岛星球"
