--- a/planetary_diversity/localisation/spanish/planetarydiversity_planet_classes_l_spanish.yml
+++ b/planetary_diversity/localisation/spanish/planetarydiversity_planet_classes_l_spanish.yml
@@ -99,6 +99,12 @@
  mod_pc_pd_algae_habitability: "Ocean Habitability"
  trait_pc_pd_algae_preference: "Ocean Preference"
  trait_pc_pd_algae_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_columnar: "Columnar World"
+ pc_pd_columnar_desc: "A rocky world with a nitrogen-oxygen atmosphere and extensive hydrosphere. The surface is covered in oceans and interspersed with landmasses formed by columnar basalt structures resulting from eons of significant volcanic activity."
+ pc_pd_columnar_adj: "columned"
+ mod_pc_pd_columnar_habitability: "Ocean Habitability"
+ trait_pc_pd_columnar_preference: "Ocean Preference"
+ trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_reef: "Reef World"
  pc_pd_reef_desc: "Rocky temperate world with a nitrogen-oxygen atmosphere and a significant hydrosphere. Shallow oceans cover more than 99% of the surface and the under the surface significant reef systems can be seen from orbit. The only areas above water are where the reef system has grown high enough to create scattered island chains of coral."
  pc_pd_reef_adj: "reefed"
@@ -362,7 +368,7 @@
  trait_pc_pd_antarctic_preference: "Arctic Preference"
  trait_pc_pd_antarctic_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_aeolian: "Aeolian World"
- pc_pd_aeolian_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, this planet's winds routinely reach speeds of over 3 km per hour. These winds have created hollowed-out sinkholes, slot canyons, and depressions, which have allowed life to thrive inside, safe from the weather."
+ pc_pd_aeolian_desc: "Frigid, rocky world with a nitrogen-oxygen atmosphere, this planet's winds routinely reach speeds of over 300 km per hour. These winds have created hollowed-out sinkholes, slot canyons, and depressions, which have allowed life to thrive inside, safe from the weather."
  pc_pd_aeolian_adj: "windy"
  mod_pc_pd_aeolian_habitability: "Arctic Habitability"
  trait_pc_pd_aeolian_preference: "Arctic Preference"
